--- a/app/StardewTP/Common/Resources/less/stardewtp/defaults.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/defaults.less
@@ -2,6 +2,8 @@ html {
     box-sizing: border-box;
 
     *, *:before, *:after {
+        font-family: "Open Sans", helvetica;
+        .transition(~'all 0.2s linear');
         box-sizing: inherit;
     }
 }
