--- a/app/StardewTP/Common/Resources/less/stardewtp/general.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/general.less
@@ -3,3 +3,82 @@ form.register-form {
     width: 500px;
     margin: 10% auto;
 }
+
+.trade {
+    display: inline-block;
+    padding: 10px;
+    margin: 10px 0% 15px 0%;
+
+    &:nth-child(odd) { margin-right: 1%; }
+    &:nth-child(even) { margin-left: 1%; }
+
+    width: 49%;
+    float: left;
+
+    border-radius: @border-radius;
+    border: 1px solid #CACACA;
+    .box-shadow(~'inset 0 -2px 0 #CACACA');
+    text-decoration: none;
+
+    a { text-decoration: none; }
+
+    h1,h2,h3,h4 { 
+        margin: 0px;
+        color: rgba(0,0,0,0.2);
+
+        .alt {
+            color: #505050;
+        }
+    }
+
+    .row.footer {
+        .label {
+            padding: .5em 1.2em .45em;
+            font-size: 100%;
+        }
+    }
+
+    &:hover {
+        border: 1px solid darken(#CACACA, 20%);
+        .box-shadow(inset 0 -2px 0 darken(#CACACA, 20%));
+    }
+}
+
+.item {
+    position: relative;
+    display: inline-block;
+    padding: 10px;
+    margin: 5px 0px;
+    min-width: 90px; height: 90px;
+    border-radius: @border-radius;
+    border: 1px solid #CACACA;
+    text-align: center;
+
+    img { display: inline-block; margin: auto; }
+
+    .quantity {
+        position: absolute;
+        top: -1px; right: -1px;
+        padding: 2.5px 7px;
+
+        background-color: #2b303b;
+        color: white;
+
+        text-align: center;
+        font-weight: bold;
+
+        border-bottom: 1px solid #2b303b;
+        border-left: 1px solid #2b303b;
+        border-bottom-left-radius: @border-radius;
+        border-top-right-radius: @border-radius;
+    }
+
+    .description {
+        padding-top: 5px;
+        font-weight: 600;
+        text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+        color: #909090;
+    }
+}
+
+span.gold { color: gold; font-weight: bold; }
