--- a/app/StardewTP/Common/Resources/less/stardewtp/header.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/header.less
@@ -15,6 +15,32 @@ div.header {
         z-index: 1;
     }
 
+    .hero {
+        position: relative;
+        z-index: 2;
+
+        .spinner {
+            .center;
+            color: white;
+            font-size: 40px;
+            line-height: 450px;
+
+            .words {               
+                position: relative;
+                font-weight: bold;
+                text-align: right;
+                font-style: italic;
+
+                > b {
+                    display: none;
+                    opacity: 0.99;
+                    -webkit-opacity: 0.99;
+                    .transition(~'none');
+                }
+            }
+        }
+    }
+
     .navbar {
         .navbar-inverse;
 
@@ -44,6 +70,22 @@ div.header {
 
             .navbar-text {
                 color: white;
+            }
+        }
+
+        .btn {
+            line-height: 40px;
+            margin-top: 5px; 
+            margin-bottom: 5px;
+            padding: 0px 20px;
+
+            color: white;
+            background-color: @header-button-bg-color;
+            .box-shadow(inset 0 -4px 0 darken(@header-button-bg-color, 5%));
+
+            &:hover {
+                background-color: darken(@header-button-bg-color, 5%);
+                .box-shadow(inset 0 -4px 0 darken(@header-button-bg-color, 7.5%));
             }
         }
     }
