--- a/app/StardewTP/Common/Resources/less/stardewtp/stardewtp.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/stardewtp.less
@@ -1,4 +1,7 @@
+@import "mixins/mixins.less";
+
 @import "defaults.less";
 @import "general.less";
 @import "header.less";
+@import "bootstrap_overrides.less";
 @import "utilities.less";
