--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1123,8 +1123,9 @@ img {
   background-color: #ffffff;
   border: 1px solid #dddddd;
   border-radius: 4px;
-  -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   display: inline-block;
   max-width: 100%;
@@ -2547,15 +2548,18 @@ output {
   background-image: none;
   border: 1px solid #cccccc;
   border-radius: 4px;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -moz-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .form-control:focus {
   border-color: #66afe9;
   outline: 0;
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
@@ -2813,11 +2817,13 @@ select[multiple].input-lg {
 }
 .has-success .form-control {
   border-color: #3c763d;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .has-success .form-control:focus {
   border-color: #2b542c;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
 }
@@ -2843,11 +2849,13 @@ select[multiple].input-lg {
 }
 .has-warning .form-control {
   border-color: #8a6d3b;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .has-warning .form-control:focus {
   border-color: #66512c;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b;
 }
@@ -2873,11 +2881,13 @@ select[multiple].input-lg {
 }
 .has-error .form-control {
   border-color: #a94442;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .has-error .form-control:focus {
   border-color: #843534;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
 }
@@ -3029,6 +3039,7 @@ select[multiple].input-lg {
 .btn.active {
   outline: 0;
   background-image: none;
+  -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
@@ -3038,6 +3049,7 @@ fieldset[disabled] .btn {
   cursor: not-allowed;
   opacity: 0.65;
   filter: alpha(opacity=65);
+  -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -3398,6 +3410,7 @@ fieldset[disabled] .btn-danger.focus {
 .btn-link[disabled],
 fieldset[disabled] .btn-link {
   background-color: transparent;
+  -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -3455,8 +3468,9 @@ input[type="button"].btn-block {
 }
 .fade {
   opacity: 0;
-  -webkit-transition: opacity 0.15s linear;
   -o-transition: opacity 0.15s linear;
+  -moz-transition: opacity 0.15s linear;
+  -webkit-transition: opacity 0.15s linear;
   transition: opacity 0.15s linear;
 }
 .fade.in {
@@ -3520,6 +3534,7 @@ tbody.collapse.in {
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
@@ -3710,10 +3725,12 @@ tbody.collapse.in {
   padding-right: 12px;
 }
 .btn-group.open .dropdown-toggle {
+  -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 .btn-group.open .dropdown-toggle.btn-link {
+  -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -4352,6 +4369,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding: 10px 15px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   margin-top: 8px;
@@ -4423,6 +4441,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-right: 0;
     padding-top: 0;
     padding-bottom: 0;
+    -moz-box-shadow: none;
     -webkit-box-shadow: none;
     box-shadow: none;
   }
@@ -4988,8 +5007,9 @@ a.badge:focus {
   background-color: #ffffff;
   border: 1px solid #dddddd;
   border-radius: 4px;
-  -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
+  -moz-transition: border 0.2s ease-in-out;
+  -webkit-transition: border 0.2s ease-in-out;
   transition: border 0.2s ease-in-out;
 }
 .thumbnail > img,
@@ -5103,6 +5123,7 @@ a.thumbnail.active {
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border-radius: 4px;
+  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
@@ -5115,10 +5136,12 @@ a.thumbnail.active {
   color: #ffffff;
   text-align: center;
   background-color: #337ab7;
+  -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  -webkit-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
+  -moz-transition: width 0.6s ease;
+  -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
 .progress-striped .progress-bar,
@@ -5425,6 +5448,7 @@ button.list-group-item-danger.active:focus {
   background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 4px;
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
@@ -5796,6 +5820,7 @@ button.list-group-item-danger.active:focus {
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
@@ -5882,6 +5907,7 @@ button.close {
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
+  -moz-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   background-clip: padding-box;
@@ -5947,6 +5973,7 @@ button.close {
     margin: 30px auto;
   }
   .modal-content {
+    -moz-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   }
@@ -6102,6 +6129,7 @@ button.close {
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -6215,8 +6243,9 @@ button.close {
 .carousel-inner > .item {
   display: none;
   position: relative;
-  -webkit-transition: 0.6s ease-in-out left;
   -o-transition: 0.6s ease-in-out left;
+  -moz-transition: 0.6s ease-in-out left;
+  -webkit-transition: 0.6s ease-in-out left;
   transition: 0.6s ease-in-out left;
 }
 .carousel-inner > .item > img,
@@ -6730,6 +6759,11 @@ html {
 html *,
 html *:before,
 html *:after {
+  font-family: "Open Sans", helvetica;
+  -o-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
   box-sizing: inherit;
 }
 a {
@@ -6739,6 +6773,90 @@ form.login-form,
 form.register-form {
   width: 500px;
   margin: 10% auto;
+}
+.trade {
+  display: inline-block;
+  padding: 10px;
+  margin: 10px 0% 15px 0%;
+  width: 49%;
+  float: left;
+  border-radius: 2px;
+  border: 1px solid #CACACA;
+  -moz-box-shadow: inset 0 -2px 0 #CACACA;
+  -webkit-box-shadow: inset 0 -2px 0 #CACACA;
+  box-shadow: inset 0 -2px 0 #CACACA;
+  text-decoration: none;
+}
+.trade:nth-child(odd) {
+  margin-right: 1%;
+}
+.trade:nth-child(even) {
+  margin-left: 1%;
+}
+.trade a {
+  text-decoration: none;
+}
+.trade h1,
+.trade h2,
+.trade h3,
+.trade h4 {
+  margin: 0px;
+  color: rgba(0, 0, 0, 0.2);
+}
+.trade h1 .alt,
+.trade h2 .alt,
+.trade h3 .alt,
+.trade h4 .alt {
+  color: #505050;
+}
+.trade .row.footer .label {
+  padding: .5em 1.2em .45em;
+  font-size: 100%;
+}
+.trade:hover {
+  border: 1px solid #979797;
+  -moz-box-shadow: inset 0 -2px 0 #979797;
+  -webkit-box-shadow: inset 0 -2px 0 #979797;
+  box-shadow: inset 0 -2px 0 #979797;
+}
+.item {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  margin: 5px 0px;
+  min-width: 90px;
+  height: 90px;
+  border-radius: 2px;
+  border: 1px solid #CACACA;
+  text-align: center;
+}
+.item img {
+  display: inline-block;
+  margin: auto;
+}
+.item .quantity {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  padding: 2.5px 7px;
+  background-color: #2b303b;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 1px solid #2b303b;
+  border-left: 1px solid #2b303b;
+  border-bottom-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+.item .description {
+  padding-top: 5px;
+  font-weight: 600;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  color: #909090;
+}
+span.gold {
+  color: gold;
+  font-weight: bold;
 }
 div.header {
   position: relative;
@@ -6757,6 +6875,32 @@ div.header .screen {
   bottom: 0px;
   background: rgba(0, 0, 0, 0.6);
   z-index: 1;
+}
+div.header .hero {
+  position: relative;
+  z-index: 2;
+}
+div.header .hero .spinner {
+  width: 66%;
+  margin: auto;
+  color: white;
+  font-size: 40px;
+  line-height: 450px;
+}
+div.header .hero .spinner .words {
+  position: relative;
+  font-weight: bold;
+  text-align: right;
+  font-style: italic;
+}
+div.header .hero .spinner .words > b {
+  display: none;
+  opacity: 0.99;
+  -webkit-opacity: 0.99;
+  -o-transition: none;
+  -moz-transition: none;
+  -webkit-transition: none;
+  transition: none;
 }
 div.header .navbar {
   background-color: #222222;
@@ -6880,6 +7024,69 @@ div.header .navbar .navbar-nav > .active > a:focus {
 }
 div.header .navbar .navbar-nav .navbar-text {
   color: white;
+}
+div.header .navbar .btn {
+  line-height: 40px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 0px 20px;
+  color: white;
+  background-color: #333d54;
+  -moz-box-shadow: inset 0 -4px 0 #293144;
+  -webkit-box-shadow: inset 0 -4px 0 #293144;
+  box-shadow: inset 0 -4px 0 #293144;
+}
+div.header .navbar .btn:hover {
+  background-color: #293144;
+  -moz-box-shadow: inset 0 -4px 0 #252c3c;
+  -webkit-box-shadow: inset 0 -4px 0 #252c3c;
+  box-shadow: inset 0 -4px 0 #252c3c;
+}
+.btn {
+  font-weight: 700;
+  text-transform: uppercase;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  border: none;
+  -moz-box-shadow: inset 0 -4px 0 rgba(255,255,255,0.5);
+  -webkit-box-shadow: inset 0 -4px 0 rgba(255,255,255,0.5);
+  box-shadow: inset 0 -4px 0 rgba(255,255,255,0.5);
+}
+.btn:focus {
+  outline: none;
+}
+.label {
+  border-radius: 2px;
+  display: inline-block;
+}
+.label.label-outline {
+  background: none;
+  border-width: 1px;
+  border-style: solid;
+}
+.label.label-outline.label-default {
+  border-color: #777777;
+  color: #777777;
+}
+.label.label-outline.label-primary {
+  border-color: #337ab7;
+  color: #337ab7;
+}
+.label.label-outline.label-success {
+  border-color: #5cb85c;
+  color: #5cb85c;
+}
+.label.label-outline.label-info {
+  border-color: #5bc0de;
+  color: #5bc0de;
+}
+.label.label-outline.label-warning {
+  border-color: #f0ad4e;
+  color: #f0ad4e;
+}
+.label.label-outline.label-danger {
+  border-color: #d9534f;
+  color: #d9534f;
 }
 .center {
   width: 66%;
