--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7031,16 +7031,16 @@ div.header .navbar .btn {
   margin-bottom: 5px;
   padding: 0px 20px;
   color: white;
-  background-color: #333d54;
-  -moz-box-shadow: inset 0 -4px 0 #293144;
-  -webkit-box-shadow: inset 0 -4px 0 #293144;
-  box-shadow: inset 0 -4px 0 #293144;
+  background-color: #77c270;
+  -moz-box-shadow: inset 0 -4px 0 #66ba5e;
+  -webkit-box-shadow: inset 0 -4px 0 #66ba5e;
+  box-shadow: inset 0 -4px 0 #66ba5e;
 }
 div.header .navbar .btn:hover {
-  background-color: #293144;
-  -moz-box-shadow: inset 0 -4px 0 #252c3c;
-  -webkit-box-shadow: inset 0 -4px 0 #252c3c;
-  box-shadow: inset 0 -4px 0 #252c3c;
+  background-color: #66ba5e;
+  -moz-box-shadow: inset 0 -4px 0 #5eb755;
+  -webkit-box-shadow: inset 0 -4px 0 #5eb755;
+  box-shadow: inset 0 -4px 0 #5eb755;
 }
 .btn {
   font-weight: 700;
