--- a/app/StardewTP/Common/Resources/less/stardewtp/defaults.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/defaults.less
@@ -1,8 +1,9 @@
 html {
     box-sizing: border-box;
+    
+    * { font-family: "Open Sans", helvetica; }
 
     *, *:before, *:after {
-        font-family: "Open Sans", helvetica;
         .transition(~'all 0.2s linear');
         box-sizing: inherit;
     }
