--- a/app/StardewTP/Common/Resources/less/stardewtp/general.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/general.less
@@ -4,16 +4,52 @@ form.register-form {
     margin: 10% auto;
 }
 
+.entity-list {
+    > * {
+        float: left; 
+        transition-duration: 0.1s;
+    }
+
+    &.compact {
+        > * { 
+            width: 32%;
+            margin-left: 0px;
+            margin-right: 0px;
+
+            &:nth-child(3n + 1) { margin-right: 1%; }
+
+            &:nth-child(3n + 2) { 
+                margin-left: 1%;
+                margin-right: 1%; 
+            }
+
+            &:nth-child(3n) { margin-left: 1%; }
+        }
+    }
+
+    &.comfy {
+        > * { 
+            width: 49%;
+
+            &:nth-child(odd) { margin-right: 1%; }
+            &:nth-child(even) { margin-left: 1%; }
+        }
+    }
+
+    &.list {
+        > * {
+            width: 100%;
+            float: none;
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
+}
+
 .trade {
     display: inline-block;
     padding: 10px;
     margin: 10px 0% 15px 0%;
-
-    &:nth-child(odd) { margin-right: 1%; }
-    &:nth-child(even) { margin-left: 1%; }
-
-    width: 49%;
-    float: left;
 
     border-radius: @border-radius;
     border: 1px solid #CACACA;
