--- a/app/StardewTP/Common/Resources/less/style.less
+++ b/app/StardewTP/Common/Resources/less/style.less
@@ -1,3 +1,4 @@
 @import "variables";
 @import "bootstrap/bootstrap.less";
+@import "font-awesome/font-awesome.less";
 @import "stardewtp/stardewtp.less";
