--- a/app/StardewTP/Common/Resources/less/stardewtp/bootstrap_overrides.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/bootstrap_overrides.less
@@ -1,13 +1,25 @@
 .btn {
+    padding-bottom: 10px;
     font-weight: 700;
     text-transform: uppercase;
     text-shadow: 0 1px 0 rgba(0,0,0,0.25);
     border-radius: 2px;
     border: none;
     .box-shadow(~'inset 0 -4px 0 rgba(255,255,255,0.5)');
+    box-sizing: content-box;
 
     &:focus {
         outline: none;
+    }
+}
+
+.btn-group {
+    > .btn:not(:last-child) {
+        border-right: 1px solid rgba(0,0,0,0.2);
+    }
+
+    > .btn:not(:first-child) {
+        border-left: 1px solid rgba(0,0,0,0.2);
     }
 }
 
@@ -50,5 +62,19 @@
             color: @label-danger-bg; 
         }
 
+    }
+}
+
+.page-header {
+    > .row {
+        h1,h2,h3,h4,h5 {
+            margin: 0px;
+        }
+
+        .actions {
+            vertical-align: middle;
+
+            //.btn { .btn-primary; }
+        }
     }
 }
