--- a/app/StardewTP/Common/Resources/less/stardewtp/general.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/general.less
@@ -7,6 +7,7 @@ form.register-form {
 .entity-list {
     > * {
         float: left; 
+        display: inline-block;
         transition-duration: 0.1s;
     }
 
@@ -47,7 +48,6 @@ form.register-form {
 }
 
 .trade {
-    display: inline-block;
     padding: 10px;
     margin: 10px 0% 15px 0%;
 
@@ -118,3 +118,6 @@ form.register-form {
 }
 
 span.gold { color: gold; font-weight: bold; }
+.quality.gold { color: gold; }
+.quality.silver { color: silver; }
+.quality.bronze { color: #CD7F32; }
