--- a/app/StardewTP/Common/Resources/less/stardewtp/header.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/header.less
@@ -70,6 +70,12 @@ div.header {
 
             .navbar-text {
                 color: white;
+                white-space: nowrap;
+
+                .label {
+                    margin-left: 10px;
+                    padding: 6px 10px;
+                }
             }
         }
 
