--- a/web/css/style.css
+++ b/web/css/style.css
@@ -254,8 +254,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('fonts/glyphicons-halflings-regular.eot');
-  src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('../fonts/glyphicons-halflings-regular.eot');
+  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -9263,6 +9263,11 @@ div.header .navbar .navbar-nav > .active > a:focus {
 }
 div.header .navbar .navbar-nav .navbar-text {
   color: white;
+  white-space: nowrap;
+}
+div.header .navbar .navbar-nav .navbar-text .label {
+  margin-left: 10px;
+  padding: 6px 10px;
 }
 div.header .navbar .btn {
   line-height: 40px;
@@ -9358,4 +9363,22 @@ a.u {
 }
 a.b {
   font-weight: bold;
+}
+@media (max-width: 768px) {
+  .center {
+    width: auto;
+  }
+  .header {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .center {
+    width: 100%;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .center {
+    width: 100%;
+  }
 }
