--- a/app/StardewTP/Common/Resources/less/stardewtp/general.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/general.less
@@ -117,6 +117,46 @@ form.register-form {
     }
 }
 
+.partner {
+    padding: 10px;
+    margin: 10px 0% 15px 0%;
+
+    border-radius: @border-radius;
+    border: 1px solid #CACACA;
+    .box-shadow(~'inset 0 -2px 0 #CACACA');
+    text-decoration: none;
+
+    .header {
+        > * { vertical-align: top; }
+        img {
+            width: 50px; height: 50px;
+            display: inline-block;
+            margin-right: 10px;
+            border-radius: @border-radius;
+        }
+
+        h2 {
+            display: inline-block;
+            margin: 0px;
+            line-height: 50px;
+        }
+    }
+
+    hr {
+        margin-top: 10px; 
+    }
+
+    .jobs {
+        padding: 10px;
+        border-radius: 2px;
+        background-color: slategrey;
+        color: white;
+    }
+
+    &:hover {
+    }
+}
+
 span.gold { color: gold; font-weight: bold; }
 .quality.gold { color: gold; }
 .quality.silver { color: silver; }
