--- a/app/StardewTP/Common/Resources/less/stardewtp/header.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/header.less
@@ -1,4 +1,4 @@
-div.header {
+body > div.header {
     position: relative;
     height: 450px;
 
@@ -74,7 +74,7 @@ div.header {
 
                 .label {
                     margin-left: 10px;
-                    padding: 6px 10px;
+                    padding: 5px 10px;
                 }
             }
         }
