--- a/app/StardewTP/Common/Resources/less/stardewtp/stardewtp.less
+++ b/app/StardewTP/Common/Resources/less/stardewtp/stardewtp.less
@@ -3,6 +3,7 @@
 @import "defaults.less";
 @import "general.less";
 @import "header.less";
+@import "footer.less";
 @import "bootstrap_overrides.less";
 @import "utilities.less";
 @import "responsive.less";
