--- a/web/css/style.css
+++ b/web/css/style.css
@@ -254,8 +254,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('fonts/glyphicons-halflings-regular.eot');
+  src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -9382,6 +9382,120 @@ body > div.header .navbar .btn:hover {
   -webkit-box-shadow: inset 0 -4px 0 #5eb755;
   box-shadow: inset 0 -4px 0 #5eb755;
 }
+body > div.sub-header {
+  padding: 9px 0px;
+  line-height: 22px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  /*.actions {
+        display: inline-block;
+        color: white;
+
+        > .action {
+            float: left;
+            padding: 5px;
+            font-size: 75%;
+            font-weight: bold;
+            line-height: 1;
+
+            color: white;
+            background: @label-primary-bg;
+
+            &:first-child {
+                border-top-left-radius: @border-radius;
+                border-bottom-left-radius: @border-radius;
+            }
+
+            &:last-child {
+                border-top-right-radius: @border-radius;
+                border-bottom-right-radius: @border-radius;
+            }
+
+            // custom
+            &.gold-count {
+                background: @label-primary-bg;
+            }
+        }
+    }*/
+}
+body > div.sub-header .action {
+  margin-left: 5px;
+  padding: 5px 10px;
+  color: white;
+  font-weight: bold;
+  vertical-align: baseline;
+  background: #2b303b;
+  border-radius: 2px;
+}
+body > div.sub-header .action:hover {
+  background: #566076;
+}
+body > div.sub-header .action:hover .description {
+  margin-left: 5px;
+  max-width: 300px;
+  transition: max-width 0.5s linear, margin 0.2s linear;
+}
+body > div.sub-header .gold-count {
+  margin-left: 5px;
+  padding: 5px 10px;
+  color: white;
+  font-weight: bold;
+  vertical-align: baseline;
+  background: #337ab7;
+  border-radius: 2px;
+}
+/*.action {
+        display: inline;
+        height: 22px;
+
+        span.description {
+            padding: 0px; margin: 0px;
+            width: auto;
+            max-width: 0px;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
+        &:hover {
+            span.description {
+                margin-left: 5px;
+                max-width: 1000px;
+            }
+        }
+    }
+
+        display: inline;
+        padding: 5px 10px;
+        font-size: 75%;
+        font-weight: bold;
+        line-height: 1;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: baseline;
+
+        color: #2b303b;
+        background: none;
+        border-radius: @border-radius;
+
+        transition: max-width 1s ease;
+
+        
+
+        &:hover {
+            background: #2b303b;
+
+            span.p {
+                color: white;
+                margin-left: 5px;
+                max-width: 1000px;
+            }
+        }
+    }
+
+    .label {
+        margin-left: 10px;
+        padding: 5px 10px;
+    }
+}*/
 body > div.footer {
   margin-bottom: 25px;
 }
