--- a/app/SVX/Common/Resources/less/stardewtp/general.less
+++ b/app/SVX/Common/Resources/less/stardewtp/general.less
@@ -6,7 +6,8 @@ form.register-form {
 
 .entity-list {
     > .entity {
-        float: left; 
+        float: left;
+        position: relative;
         display: inline-block;
         transition-duration: 0.1s;
 
