--- a/app/SVX/Common/Resources/less/stardewtp/bootstrap_overrides.less
+++ b/app/SVX/Common/Resources/less/stardewtp/bootstrap_overrides.less
@@ -1,3 +1,5 @@
+@border-radius-base: @border-radius;
+
 .btn {
     padding-bottom: 10px;
     font-weight: 700;
@@ -78,5 +80,12 @@
 
             //.btn { .btn-primary; }
         }
+    }
+}
+
+form {
+    label {
+        font-weight: normal;
+        font-size: 1.2em;
     }
 }
