--- a/app/SVX/Common/Resources/less/stardewtp/general.less
+++ b/app/SVX/Common/Resources/less/stardewtp/general.less
@@ -142,7 +142,7 @@ img.logo {
     }
 }
 
-.item {
+entity-list > .item {
     position: relative;
     display: inline-block;
     padding: 10px;
@@ -206,6 +206,22 @@ img.logo {
         background-color: slategrey;
         color: white;
     }
+}
+
+.contract {
+    .items {
+        background: #e9e9e9;
+        border-radius: @border-radius;
+        padding: 15px;
+        margin-bottom: 10px;
+
+        > .row {
+            color: #505050;
+            font-size: 15.5px;
+            .name { font-weight: 600; }
+            .quantity {}
+        }
+    }   
 }
 
 .partner-overview {
